moved file to /assets

--- a/_posts/2023-09-28.House-Rules.md
+++ b/_posts/2023-09-28.House-Rules.md
@@ -1,6 +1,7 @@
 ---
-images: assets/img
-typora-copy-images-to: ../assets/img
+typora-copy-images-to: /assets/img
+typora-root-url: ..
+
 lang: en-AU
 layout: post
 title: House Rules
