update catagory -> catagories in front matter

--- a/kb/kb0012.md
+++ b/kb/kb0012.md
@@ -2,7 +2,8 @@
 #**************************************
 lang: en-AU
 layout: page
-social-share: false
+social-share: true
+categories: kb
 
 typora-copy-images-to: ../assets/img/${filename}
 typora-root-url: ../
@@ -30,7 +31,7 @@ tags:
   - hpe
   - aruba
   - comware
-category: kb
+
 comments: true
 
 
