--- a/kb/KB0009.md
+++ b/kb/KB0009.md
@@ -2,7 +2,8 @@
 #**************************************
 lang: en-AU
 layout: post
-social-share: false
+social-share: true
+categories: kb
 
 typora-copy-images-to: ../assets/img/${filename}
 typora-root-url: ../
@@ -30,7 +31,7 @@ tags:
   - knowledgebase
   - imc
   - aruba
-category: kb
+
 comments: true
 
 
