--- a/kb/KB0009.md
+++ b/kb/KB0009.md
@@ -24,7 +24,7 @@ full-width: false
 
 
 share-title: How to enable interface graphing on IMC
-share-description: IMC is an HPE product for monitoring and managing network devices.\
+share-description: IMC is an HPE product for monitoring and managing network devices.
 share-img:
 
 tags:
