update video location

--- a/kb/KB0009.md
+++ b/kb/KB0009.md
@@ -39,7 +39,7 @@ comments: true
 
 ## TLDR - Here is a video
 
-<video src="/assets/videos/enable%20interface%20graphing%20in%20IMC.mp4"></video>
+<video src="/assets/vid/kb0009.mp4"></video>
 
 ## Step-By-Step
 
