--- a/kb/KB0009.md
+++ b/kb/KB0009.md
@@ -14,7 +14,7 @@ typora-root-url: ../
 redirect_from:
 #*************************************
 
-title: KB0009
+title: kb0009
 subtitle: Enabling Interface Graphing on IMC
 author: stephen
 updated:
