--- a/_drafts/KB0006.md
+++ b/_drafts/KB0006.md
@@ -14,24 +14,120 @@ typora-root-url: ../
 redirect_from:
 #*************************************
 
-title: 
-subtitle: 
-author:
+title: KB0006
+subtitle: Deploying a New Edge Node
+author: Stephen
 updated:
-cover-img:
-thumbnail-img:
+thumbnail: /assets/logos/nsx-icon.png
+cover-img: /assets/logos/nsx.png
 full-width: false
 
 share-title:
 share-description: 
-share-img:
+share-img: /assets/logos/nsx-icon.png
 
 tags:
-  -
+  - nsx
+  - vmware
+  - edge node
+  - deploy
 categories: kb
 comments: true
 ---
 
-![image-20231012204912096](/assets/img/KB0006/image-20231012204912096.png)
+There will be times within the NSX lifecycle when you could be required to deploy a new edge node, including:
 
-​																												
+* The edge node has become cpu constrained;
+* The NSX environment needs to have additional throughput, and you are already running large edge nodes; or
+* The edge node has become corrupted and needs to be replaced to restore service.
+
+## TLDR - Here is a Video
+
+<video src="/assets/vid/kb0006.webm" style="zoom:33%;"></video>
+
+## Step-By-Step Guide
+
+1. Log in to the NSX manager; the global or local manager is suitable. If you are using the global manager, you must select the local manager for the environment to which you will add the edge node.
+1. From the NSX manager screen select `System` from the top menu bar.
+
+![image-20231012234143632](/assets/img/kb0006/image-20231012234143632.png)
+
+1. From the left hand menu click on `Fabric`.
+
+   <img src="/assets/img/kb0006/image-20230906223156853.png" alt="image-20230906223156853" style="zoom:50%;" />
+
+1. From the menu that has extended from below the Fabric option select `Nodes`.
+
+   <img src="/assets/img/kb0006/image-20230906223240360.png" alt="image-20230906223240360" style="zoom:50%;" />
+
+1. Select `Edge Transport Nodes` from the secondary menu that has appeared on the right.
+
+   <img src="/assets/img/kb0006/image-20230906223328229.png" alt="image-20230906223328229" style="zoom: 30%;" />
+
+1. Select `+ Add Edge Node` from the action menu.
+
+   <img src="/assets/img/kb0006/image-20230906223444988.png" alt="image-20230906223444988" style="zoom: 40%;" />
+
+1. You will then be presented with the `Add Edge Node` wizard
+
+   * Fill out the name of the node, this will be how it is displayed in the UI
+   * Fill out the FQDN[^fn1]
+   * Select the Form factor for the node. [^fn2]
+   * Do not use Small unless it it for a lab environment
+   * Then click next
+
+   <img src="/assets/img/kb0006/image-20230906223604964.png" alt="image-20230906223604964" style="zoom:33%;" />
+
+1. Fill in the User
+
+   <img src="/assets/img/kb0006/image-20230906223749731.png" alt="image-20230906223749731" style="zoom:33%;" />
+
+   <img src="/assets/img/kb0006/image-20230906223802771.png" alt="image-20230906223802771" style="zoom:33%;" />
+
+1. test
+
+   <img src="/assets/img/kb0006/image-20230906223935148.png" alt="image-20230906223935148" style="zoom: 33%;" />
+
+1.  test
+
+    <img src="/assets/img/kb0006/image-20230906224330505.png" alt="image-20230906224330505" style="zoom: 33%;" />
+
+1.   test
+
+     <img src="/assets/img/kb0006/image-20230906224435131.png" alt="image-20230906224435131" style="zoom: 33%;" />
+
+1.  test
+
+
+   <img src="/assets/img/kb0006/image-20230906224818524.png" alt="image-20230906224818524" style="zoom: 33%;" />
+
+1.  test
+
+<img src="/assets/img/kb0006/image-20230906224925219.png" alt="image-20230906224925219" style="zoom: 33%;" />
+
+1.  test
+
+<img src="/assets/img/kb0006/image-20230906225000802.png" alt="image-20230906225000802" style="zoom: 33%;" />
+
+1. test
+
+<img src="/assets/img/kb0006/image-20230906225055186.png" alt="image-20230906225055186" style="zoom: 33%;" />
+
+1. test
+
+<img src="/assets/img/kb0006/image-20230906225104376.png" alt="image-20230906225104376" style="zoom: 33%;" />
+
+1. test
+   <img src="/assets/img/kb0006/image-20231012234908280.png" alt="image-20231012234908280" style="zoom: 33%;" />
+
+1. test
+
+<img src="/assets/img/kb0006/image-20231012234922345.png" alt="image-20231012234922345" style="zoom: 33%;" />
+
+1. test
+
+<img src="/assets/img/kb0006/image-20231012234934227.png" alt="image-20231012234934227" style="zoom: 33%;" />
+
+
+[^fn1]: *F*ully *Q*ualified *D*omain *N*ame
+[^fn2]: Ensure that you have selected the correct node sizing for the workload that you are expecting, as you cannot resize an edge node, you will have to deploy a new edge node of the correct size and  [replace it](KB0007 = Replacing an Edge Node.md) 
