--- a/_drafts/KB0007.md
+++ b/_drafts/KB0007.md
@@ -14,20 +14,52 @@ typora-root-url: ../
 redirect_from:
 #*************************************
 
-title: 
-subtitle: 
-author:
+title: KB0007
+subtitle: Replacing an NSX-T Edge Node
+author: Stephen
 updated:
-cover-img:
-thumbnail-img:
+thumbnail: /assets/logos/nsx-icon.png
+cover-img: /assets/logos/nsx.png
 full-width: false
 
 share-title:
 share-description: 
-share-img:
+share-img: /assets/logos/nsx-icon.png
 
 tags:
-  -
+  - nsx
+  - vmware
+  - edge node
+  - replace
 categories: kb
 comments: true
 ---
+
+* [click here for how to deploy and edge node](kb0007) 
+
+## TLDR - Here is a video
+
+<video src="/assets/vid/kb0007.webm" style="zoom:33%;"></video>
+
+## Step-By-Step
+
+![image-20231013001103267](/assets/img/kb0007/image-20231013001103267.png)
+
+![image-20231013001111097](/assets/img/kb0007/image-20231013001111097.png)
+
+![image-20230906223240360](/assets/img/kb0007/image-20230906223240360.png)
+
+![image-20230906230938199](/assets/img/kb0007/image-20230906230938199.png)
+
+![image-20230906231046796](/assets/img/kb0007/image-20230906231046796.png)
+
+![image-20230906231128093](/assets/img/kb0007/image-20230906231128093.png)
+
+![image-20230906231159356](/assets/img/kb0007/image-20230906231159356.png)
+
+![image-20230906231233722](/assets/img/kb0007/image-20230906231233722.png)
+
+![image-20230906233142817](/assets/img/kb0007/image-20230906233142817.png)
+
+![image-20230906233217780](/assets/img/kb0007/image-20230906233217780.png)
+
