--- a/_drafts/KB0008.md
+++ b/_drafts/KB0008.md
@@ -14,20 +14,27 @@ typora-root-url: ../
 redirect_from:
 #*************************************
 
-title: 
-subtitle: 
+title: kb0008
+subtitle: Deleting NSX Edge Node
 author:
 updated:
-cover-img:
-thumbnail-img:
+thumbnail: /assets/logos/nsx-icon.png
+cover-img: /assets/logos/nsx.png
 full-width: false
 
 share-title:
 share-description: 
-share-img:
+share-img:  /assets/logos/nsx-icon.png
 
 tags:
-  -
+  - nsx
+  - vmware
+  - edge node
+  - delete
 categories: kb
 comments: true
 ---
+
+<img src="/assets/img/kb0008/image-20231013001200872.png" alt="image-20231013001200872" style="zoom:33%;" />
+
+<img src="/assets/img/kb0008/image-20231013001150136.png" alt="image-20231013001150136" style="zoom:33%;" />
