--- a/kb/KB0009.md
+++ b/kb/KB0009.md
@@ -18,7 +18,7 @@ title: KB0009
 subtitle: Enabling Interface Graphing on IMC
 author: stephen
 updated:
-cover-img:
+cover-img: /assets/logos/hpe-aruba.png
 thumbnail-img:
 full-width: false
 
