--- a/kb/kb0002.md
+++ b/kb/kb0002.md
@@ -16,18 +16,23 @@ redirect_from:
 
 title: KB0002
 subtitle: Avoiding Password Expiry in NSX Manager and Edges
-author: Stephen
+author: stephen
 updated:
-cover-img:
-thumbnail-img:
+cover-img:/assets/logos/nsx.png
+thumbnail-img: /assets/logos/nsx-icon.png
 full-width: false
 
 share-title:
 share-description: 
-share-img:
+share-img: /assets/logos/nsx-icon.png
 
 tags:
-  -
+  - nsx
+  - password expiry
+  - password
+  - vmware
+  - manager
+  - edgenode
 categories: kb
 comments: true
 ---
@@ -40,7 +45,7 @@ Run the following commands to prevent password expiration for the three accounts
 
 ## Increasing the Number of Days to Password Expiry
 
-```
+```terminal
 set user admin password-expiration 9999
 set user audit password-expiration 9999
 set user root password-expiration 9999
@@ -48,7 +53,7 @@ set user root password-expiration 9999
 
 ## Validate settings have taken effect:
 
-```
+```terminal
 get user admin password-expiration
 get user audit password-expiration
 get user root password-expiration
