--- a/kb/kb0014.md
+++ b/kb/kb0014.md
@@ -18,7 +18,7 @@ title: KB0014
 subtitle: Using iperf3 to Troubleshoot Network Speed Issues
 author: Stephen
 updated:
-cover-img:
+cover-img: /assets/logos/iperf.png
 thumbnail-img:
 full-width: false
 
