--- a/kb/kb0001.md
+++ b/kb/kb0001.md
@@ -18,13 +18,13 @@ title: KB0001
 subtitle: Log Rotate Fails for /var/log/vmware on NSX-T Manager and Edge Nodes
 author: Stephen
 updated:
-cover-img:
-thumbnail-img:
+cover-img:/assets/logos/nsx.png
+thumbnail-img: /assets/logos/nsx-icon.png
 full-width: false
 
 share-title: 
 share-description: This issue is caused due to an extra decimal point in the configuration file. This converts the number to a float, which the code does not accept.
-share-img:
+share-img: /assets/logos/nsx-icon.png
 
 tags:
   - nsx
@@ -52,7 +52,7 @@ If you run the command:
 
 The following errors are displayed
 
-```
+```terminal
 error: appliance-config:3 bad size '12.8'
 error: appliance-config:17 bad size '51.2'
 ```
