--- a/kb/KB0004.md
+++ b/kb/KB0004.md
@@ -14,22 +14,24 @@ typora-root-url: ../
 redirect_from:
 #*************************************
 
-title: KB0004             
-subtitle: 
-author:
+title: KB0004
+subtitle: Verify the Tier-0 Logical Router and TOR Connection
+author: stephen
 updated:
-cover-img:                                      
-thumbnail-img:
+cover-img:/assets/logos/nsx.png
+thumbnail-img: /assets/logos/nsx-icon.png
 full-width: false
 
 share-title:
 share-description: 
-share-img:
+share-img: /assets/logos/nsx-icon.png
 
 tags:
-  - nsx
   - vmware
-  - routing
+  - nsx
+  - tier-0
+  - tor switch
+  - switch
 categories: kb
 comments: true
 ---
@@ -75,7 +77,7 @@ type        : DISTRIBUTED_ROUTER
 
 3. Run the vrf <number> command to enter the tier-0 service router context.
 
-``` 
+``` terminal
 nsx-edge-1> vrf 5
 nsx-edge1(tier0_sr)> 
 ```
@@ -83,7 +85,7 @@ nsx-edge1(tier0_sr)>
 4. On the tier-0 service router, run the get route command and make sure the expected route appears in the routing table.
    Notice that the route to the TOR appears as connected (c).
 
-```
+```terminal
 nsx-edge1(tier0_sr)> get route
 Flags: t0c - Tier0-Connected, t0s - Tier0-Static, b - BGP,
 t0n - Tier0-NAT, t1s - Tier1-Static, t1c - Tier1-Connected,
