setup initial kb - with redirects from old content

--- a/kb/KB0009.md
+++ b/kb/KB0009.md
@@ -12,6 +12,11 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - 2023/10/08/imc-enable-interface-graphing.html
+  - 2023-10-08-imc-enable-interface-graphing.html
+  - 2023-10-08-mc-enable-interface-graphing/
+  - 2023-10-08-mc-enable-interface-graphing
+  - 2023-10-08-mc-enable-interface-graphing/index.html
 #*************************************
 
 title: KB0009
