--- a/kb/KB0012.md
+++ b/kb/KB0012.md
@@ -12,13 +12,21 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - 2023/10/08/scheduling-a-reboot-on-hpe-comware.html
+  - 2023-10-08-scheduling-a-reboot-on-hpe-comware.html
+  - 2022/07/18/scheduling-reboots-of-hpe-comware-5-and-7.html
+  - 202207-18-scheduling-reboots-of-hpe-comware-5-and-7.html
+  - /stephen/scheduling-reboots-of-hpe-comware-5-and-7
+  - /2022/07/18/scheduling-reboots-of-hpe-comware-5-and-7/
+  - /2022/07/18/scheduling-reboots-of-hpe-comware-5-and-7/index.html
+  - /2022/07/18/scheduling-reboots-of-hpe-comware-5-and-7
 #*************************************
 
 title: KB0012
 subtitle: Scheduled Reboot with HPE Comware
 author: stephen
 updated:
-cover-img:
+cover-img: /assets/logos/hpe-aruba.png
 thumbnail-img:
 full-width: false
 
