--- a/kb/kb0001.md
+++ b/kb/kb0001.md
@@ -12,6 +12,10 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - 2023/10/08/on-nsx_t-manager-and-edge-nodes.html
+  - 2023-10-08-on-nsx_t-manager-and-edge-nodes
+  - 2023-10-08-on-nsx_t-manager-and-edge-nodes/
+  - 2023-10-08-on-nsx_t-manager-and-edge-nodes/index.html
 #*************************************
 
 title: KB0001
