--- a/kb/kb0002.md
+++ b/kb/kb0002.md
@@ -12,6 +12,9 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - 2023/10/08/avoiding-password-expiry-in-nsx-manager-and-edges.html
+  - 2023-10-08-avoiding-password-expiry-in-nsx-manager-and-edges/
+  - 2023-10-08-avoiding-password-expiry-in-nsx-manager-and-edges/index.html
 #*************************************
 
 title: KB0002
