--- a/kb/kb0006.md
+++ b/kb/kb0006.md
@@ -12,6 +12,10 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - 2023/10/08/deploying-a-new-edge-node.html
+  - 2023-10-08-deploying-a-new-edge-node
+  - 2023-10-08-deploying-a-new-edge-node/
+  - 2023-10-08-deploying-a-new-edge-node/index.html
 #*************************************
 
 title: KB0006
@@ -50,23 +54,23 @@ There will be times within the NSX lifecycle when you could be required to deplo
 1. Log in to the NSX manager; the global or local manager is suitable. If you are using the global manager, you must select the local manager for the environment to which you will add the edge node.
 1. From the NSX manager screen select `System` from the top menu bar.
 
-![image-20231012234143632](/assets/img/kb0006/image-20231012234143632.png)
+<img src="/assets/img/kb0006/image-20231012234143632.png" alt="image-20231012234143632" style="zoom:33%;" />
 
 1. From the left hand menu click on `Fabric`.
 
-   <img src="/assets/img/kb0006/image-20230906223156853.png" alt="image-20230906223156853" style="zoom:50%;" />
+   <img src="/assets/img/kb0006/image-20230906223156853.png" alt="image-20230906223156853" style="zoom: 33%;" />
 
 1. From the menu that has extended from below the Fabric option select `Nodes`.
 
-   <img src="/assets/img/kb0006/image-20230906223240360.png" alt="image-20230906223240360" style="zoom:50%;" />
+   <img src="/assets/img/kb0006/image-20230906223240360.png" alt="image-20230906223240360" style="zoom: 33%;" />
 
 1. Select `Edge Transport Nodes` from the secondary menu that has appeared on the right.
 
-   <img src="/assets/img/kb0006/image-20230906223328229.png" alt="image-20230906223328229" style="zoom: 30%;" />
+   <img src="/assets/img/kb0006/image-20230906223328229.png" alt="image-20230906223328229" style="zoom: 33%;" />
 
 1. Select `+ Add Edge Node` from the action menu.
 
-   <img src="/assets/img/kb0006/image-20230906223444988.png" alt="image-20230906223444988" style="zoom: 40%;" />
+   <img src="/assets/img/kb0006/image-20230906223444988.png" alt="image-20230906223444988" style="zoom: 33%;" />
 
 1. You will then be presented with the `Add Edge Node` wizard
 
@@ -78,55 +82,87 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
    <img src="/assets/img/kb0006/image-20230906223604964.png" alt="image-20230906223604964" style="zoom:33%;" />
 
-1. Fill in the User
+1. Fill in the User and Password for the
+
+   1. Admin Account (enable ssh)
+
+   1. Root Account (enable ssh) and
+
+   1. Audit Account
+
+   1. Then click next
+
 
    <img src="/assets/img/kb0006/image-20230906223749731.png" alt="image-20230906223749731" style="zoom:33%;" />
 
    <img src="/assets/img/kb0006/image-20230906223802771.png" alt="image-20230906223802771" style="zoom:33%;" />
 
-1. test
+1. Select and fill out the
+
+   1. Compute Manager (vCenter)
+
+   1. Cluster
+
+   1. Resource pool and
+
+   1. Datastore
+
+   1. Click Next
+
 
    <img src="/assets/img/kb0006/image-20230906223935148.png" alt="image-20230906223935148" style="zoom: 33%;" />
 
-1.  test
+1.  Set the 
+
+    1. TEP ip assignment to match your environment
+
+    1. The Managment Interface
+
+    1. Search Domain Names
+
+    1. DNS Servers and
+
+    1. NTP Servers
+
+    1. Click Next
+
 
     <img src="/assets/img/kb0006/image-20230906224330505.png" alt="image-20230906224330505" style="zoom: 33%;" />
 
-1.   test
+1.   Setup the edge node switching
+
+     1. Name the Switch as per your environment
+     1. Select thr Transport Zones
+     1. Uplink Profile
+     1. TEP Assignment and if required the IP Pool and
+     1. Set your uplinks
+     1. Click finish
 
      <img src="/assets/img/kb0006/image-20230906224435131.png" alt="image-20230906224435131" style="zoom: 33%;" />
 
-1.  test
+     <img src="/assets/img/kb0006/image-20230906224818524.png" alt="image-20230906224818524" style="zoom: 33%;" />
 
+1.   If your deployment show as unsuccessful
 
-   <img src="/assets/img/kb0006/image-20230906224818524.png" alt="image-20230906224818524" style="zoom: 33%;" />
+     <img src="/assets/img/kb0006/image-20230906224925219.png" alt="image-20230906224925219" style="zoom: 33%;" />
 
-1.  test
+     1. Click on actions > Change Deployment Config
 
-<img src="/assets/img/kb0006/image-20230906224925219.png" alt="image-20230906224925219" style="zoom: 33%;" />
+        <img src="/assets/img/kb0006/image-20230906225000802.png" alt="image-20230906225000802" style="zoom: 33%;" />
 
-1.  test
+     1. Edit your configuration / click save
+        <img src="/assets/img/kb0006/image-20230906225104376.png" alt="image-20230906225104376" style="zoom: 33%;" />
 
-<img src="/assets/img/kb0006/image-20230906225000802.png" alt="image-20230906225000802" style="zoom: 33%;" />
-
-1. test
-
-<img src="/assets/img/kb0006/image-20230906225055186.png" alt="image-20230906225055186" style="zoom: 33%;" />
-
-1. test
-
-<img src="/assets/img/kb0006/image-20230906225104376.png" alt="image-20230906225104376" style="zoom: 33%;" />
-
-1. test
+1.   One you have seen it deploying, you can monitor it's progress via the vCenter that it is deployting to
    <img src="/assets/img/kb0006/image-20231012234908280.png" alt="image-20231012234908280" style="zoom: 33%;" />
 
-1. test
+1.   The node will sit at not ready for some time, this is normal
 
-<img src="/assets/img/kb0006/image-20231012234922345.png" alt="image-20231012234922345" style="zoom: 33%;" />
+    <img src="/assets/img/kb0006/image-20231012234922345.png" alt="image-20231012234922345" style="zoom: 33%;" />
 
-1. test
+1.  Once completed it will change to success
 
-<img src="/assets/img/kb0006/image-20231012234934227.png" alt="image-20231012234934227" style="zoom: 33%;" />
+    <img src="/assets/img/kb0006/image-20231012234934227.png" alt="image-20231012234934227" style="zoom: 33%;" />
 
 
 [^fn1]: *F*ully *Q*ualified *D*omain *N*ame
