--- a/kb/kb0011.md
+++ b/kb/kb0011.md
@@ -12,6 +12,10 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - 2023/10/08/nsx-edge-node-sizing-guide.html
+  - 2023-10-08-nsx-edge-node-sizing-guide
+  - 2023-10-08-nsx-edge-node-sizing-guide/
+  - 2023-10-08-nsx-edge-node-sizing-guide/index.html
 #*************************************
 
 title: KB0011
