--- a/kb/kb0014.md
+++ b/kb/kb0014.md
@@ -12,6 +12,10 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - 2023/10/08/using-iperf3.html
+  - 2023-10-08-using-iperf3
+  - 2023-10-08-using-iperf3/
+  - 2023-10-08-using-iperf3/index.html
 #*************************************
 
 title: KB0014
