--- a/kb/kb0020.md
+++ b/kb/kb0020.md
@@ -12,6 +12,10 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - 2023/10/08/sort-linux-processes-by-resource-usage.html
+  - 2023-10-08-sort-linux-processes-by-resource-usage
+  - 2023-10-08-sort-linux-processes-by-resource-usage/
+  - 2023-10-08-sort-linux-processes-by-resource-usage/index.html
 #*************************************
 
 title: KB0020
