repace with final page format

--- a/kb/kb0020.md
+++ b/kb/kb0020.md
@@ -42,7 +42,7 @@ comments: true
 
 ### **Output**
 
-```
+```terminal
 0. /opt/atom/atom | 27.8
 1. /usr/lib/chromium-browser/chromium-browser | 11.2
 2. python3.6 | 11.0
