fix front matter typo

--- a/_drafts/KB0008.md
+++ b/_drafts/KB0008.md
@@ -14,7 +14,7 @@ typora-root-url: ../
 redirect_from:
 #*************************************
 
-title: kb0008
+title: KB0008
 subtitle: Deleting NSX Edge Node
 author:
 updated:
