--- a/_drafts/kb00.md
+++ b/_drafts/kb00.md
@@ -14,7 +14,7 @@ typora-root-url: ../
 redirect_from:
 #*************************************
 
-title: kb00
+title: KB00
 subtitle: 
 author: stephen
 updated: 
