--- a/kb/kb0018.md
+++ b/kb/kb0018.md
@@ -18,7 +18,7 @@ redirect_from:
   - 2023-10-08-backup-and-restore-vcsa-vpostgres-database/index.html
 #*************************************
 
-title: kb0018
+title: KB0018
 subtitle: Back up and restore vCenter Server Appliance vPostgres database
 author: stephen
 updated:
