--- a/kb/kb0006.md
+++ b/kb/kb0006.md
@@ -47,30 +47,30 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
 ## TLDR - Here is a Video
 
-<video src="/assets/vid/kb0006.webm" style="zoom:33%;"></video>
+<video src="../assets/vid/kb0006.webm" style="zoom:33%;"></video>
 
 ## Step-By-Step Guide
 
 1. Log in to the NSX manager; the global or local manager is suitable. If you are using the global manager, you must select the local manager for the environment to which you will add the edge node.
 1. From the NSX manager screen select `System` from the top menu bar.
 
-<img src="/assets/img/kb0006/image-20231012234143632.png" alt="image-20231012234143632" style="zoom:33%;" />
+![image-20231012234143632](/assets/img/kb0006/image-20231012234143632.png)
 
 1. From the left hand menu click on `Fabric`.
 
-   <img src="/assets/img/kb0006/image-20230906223156853.png" alt="image-20230906223156853" style="zoom: 33%;" />
+   ![image-20230906223156853](/assets/img/kb0006/image-20230906223156853.png)
 
 1. From the menu that has extended from below the Fabric option select `Nodes`.
 
-   <img src="/assets/img/kb0006/image-20230906223240360.png" alt="image-20230906223240360" style="zoom: 33%;" />
+   ![image-20230906223240360](/assets/img/kb0006/image-20230906223240360.png)
 
 1. Select `Edge Transport Nodes` from the secondary menu that has appeared on the right.
 
-   <img src="/assets/img/kb0006/image-20230906223328229.png" alt="image-20230906223328229" style="zoom: 33%;" />
+   ![image-20230906223328229](/assets/img/kb0006/image-20230906223328229.png)
 
 1. Select `+ Add Edge Node` from the action menu.
 
-   <img src="/assets/img/kb0006/image-20230906223444988.png" alt="image-20230906223444988" style="zoom: 33%;" />
+   ![image-20230906223444988](/assets/img/kb0006/image-20230906223444988.png)
 
 1. You will then be presented with the `Add Edge Node` wizard
 
@@ -80,7 +80,7 @@ There will be times within the NSX lifecycle when you could be required to deplo
    * Do not use Small unless it it for a lab environment
    * Then click next
 
-   <img src="/assets/img/kb0006/image-20230906223604964.png" alt="image-20230906223604964" style="zoom:33%;" />
+   ![image-20230906223604964](/assets/img/kb0006/image-20230906223604964.png)
 
 1. Fill in the User and Password for the
 
@@ -93,9 +93,9 @@ There will be times within the NSX lifecycle when you could be required to deplo
    1. Then click next
 
 
-   <img src="/assets/img/kb0006/image-20230906223749731.png" alt="image-20230906223749731" style="zoom:33%;" />
+   ![image-20230906223749731](/assets/img/kb0006/image-20230906223749731.png)
 
-   <img src="/assets/img/kb0006/image-20230906223802771.png" alt="image-20230906223802771" style="zoom:33%;" />
+   ![image-20230906223802771](/assets/img/kb0006/image-20230906223802771.png)
 
 1. Select and fill out the
 
@@ -110,7 +110,7 @@ There will be times within the NSX lifecycle when you could be required to deplo
    1. Click Next
 
 
-   <img src="/assets/img/kb0006/image-20230906223935148.png" alt="image-20230906223935148" style="zoom: 33%;" />
+   ![image-20230906223935148](/assets/img/kb0006/image-20230906223935148.png)
 
 1.  Set the 
 
@@ -138,31 +138,31 @@ There will be times within the NSX lifecycle when you could be required to deplo
      1. Set your uplinks
      1. Click finish
 
-     <img src="/assets/img/kb0006/image-20230906224435131.png" alt="image-20230906224435131" style="zoom: 33%;" />
+     ![image-20230906224435131](/assets/img/kb0006/image-20230906224435131.png)
 
-     <img src="/assets/img/kb0006/image-20230906224818524.png" alt="image-20230906224818524" style="zoom: 33%;" />
+     ![image-20230906224818524](/assets/img/kb0006/image-20230906224818524.png)
 
 1.   If your deployment show as unsuccessful
 
-     <img src="/assets/img/kb0006/image-20230906224925219.png" alt="image-20230906224925219" style="zoom: 33%;" />
+     ![image-20230906224925219](/assets/img/kb0006/image-20230906224925219.png)
 
      1. Click on actions > Change Deployment Config
 
-        <img src="/assets/img/kb0006/image-20230906225000802.png" alt="image-20230906225000802" style="zoom: 33%;" />
+        ![image-20230906225000802](/assets/img/kb0006/image-20230906225000802.png)
 
      1. Edit your configuration / click save
-        <img src="/assets/img/kb0006/image-20230906225104376.png" alt="image-20230906225104376" style="zoom: 33%;" />
+        ![image-20230906225104376](/assets/img/kb0006/image-20230906225104376.png)
 
 1.   One you have seen it deploying, you can monitor it's progress via the vCenter that it is deployting to
-   <img src="/assets/img/kb0006/image-20231012234908280.png" alt="image-20231012234908280" style="zoom: 33%;" />
+   ![image-20231012234908280](/assets/img/kb0006/image-20231012234908280.png)
 
 1.   The node will sit at not ready for some time, this is normal
 
-    <img src="/assets/img/kb0006/image-20231012234922345.png" alt="image-20231012234922345" style="zoom: 33%;" />
+    ![image-20231012234922345](/assets/img/kb0006/image-20231012234922345.png)
 
 1.  Once completed it will change to success
 
-    <img src="/assets/img/kb0006/image-20231012234934227.png" alt="image-20231012234934227" style="zoom: 33%;" />
+    ![image-20231012234934227](/assets/img/kb0006/image-20231012234934227.png)
 
 
 [^fn1]: *F*ully *Q*ualified *D*omain *N*ame
