--- a/kb/kb0006.md
+++ b/kb/kb0006.md
@@ -53,24 +53,23 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
 1. Log in to the NSX manager; the global or local manager is suitable. If you are using the global manager, you must select the local manager for the environment to which you will add the edge node.
 1. From the NSX manager screen select `System` from the top menu bar.
-
-![image-20231012234143632](/assets/img/kb0006/image-20231012234143632.png)
-
+   ![image-20231014214734614](/assets/img/kb0006/image-20231014214734614.png)
+   
 1. From the left hand menu click on `Fabric`.
 
-   ![image-20230906223156853](/assets/img/kb0006/image-20230906223156853.png)
+   ![image-20231014214816875](/assets/img/kb0006/image-20231014214816875.png)
 
 1. From the menu that has extended from below the Fabric option select `Nodes`.
 
-   ![image-20230906223240360](/assets/img/kb0006/image-20230906223240360.png)
+   ![image-20231014214840970](/assets/img/kb0006/image-20231014214840970.png)
 
 1. Select `Edge Transport Nodes` from the secondary menu that has appeared on the right.
 
-   ![image-20230906223328229](/assets/img/kb0006/image-20230906223328229.png)
+   ![image-20231014214853127](/assets/img/kb0006/image-20231014214853127.png)
 
 1. Select `+ Add Edge Node` from the action menu.
 
-   ![image-20230906223444988](/assets/img/kb0006/image-20230906223444988.png)
+   ![image-20231014214909337](/assets/img/kb0006/image-20231014214909337.png)
 
 1. You will then be presented with the `Add Edge Node` wizard
 
@@ -80,7 +79,7 @@ There will be times within the NSX lifecycle when you could be required to deplo
    * Do not use Small unless it it for a lab environment
    * Then click next
 
-   ![image-20230906223604964](/assets/img/kb0006/image-20230906223604964.png)
+   ![image-20231014215033016](/assets/img/kb0006/image-20231014215033016.png)
 
 1. Fill in the User and Password for the
 
@@ -92,10 +91,9 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
    1. Then click next
 
+   ![image-20231014215956066](/assets/img/kb0006/image-20231014215956066.png)
 
-   ![image-20230906223749731](/assets/img/kb0006/image-20230906223749731.png)
-
-   ![image-20230906223802771](/assets/img/kb0006/image-20230906223802771.png)
+   ![image-20231014215014331](/assets/img/kb0006/image-20231014215014331.png)
 
 1. Select and fill out the
 
@@ -109,8 +107,7 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
    1. Click Next
 
-
-   ![image-20230906223935148](/assets/img/kb0006/image-20230906223935148.png)
+   ![image-20231014215130237](/assets/img/kb0006/image-20231014215130237.png)
 
 1.  Set the 
 
@@ -126,8 +123,7 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
     1. Click Next
 
-
-    <img src="/assets/img/kb0006/image-20230906224330505.png" alt="image-20230906224330505" style="zoom: 33%;" />
+    ![image-20231014215724585](/assets/img/kb0006/image-20231014215724585.png)
 
 1.   Setup the edge node switching
 
@@ -138,31 +134,31 @@ There will be times within the NSX lifecycle when you could be required to deplo
      1. Set your uplinks
      1. Click finish
 
-     ![image-20230906224435131](/assets/img/kb0006/image-20230906224435131.png)
+     ![image-20231014215328822](/assets/img/kb0006/image-20231014215328822.png)
 
-     ![image-20230906224818524](/assets/img/kb0006/image-20230906224818524.png)
+     ![image-20231014215527338](/assets/img/kb0006/image-20231014215527338.png)
 
 1.   If your deployment show as unsuccessful
 
-     ![image-20230906224925219](/assets/img/kb0006/image-20230906224925219.png)
+     ![image-20231014220520035](/assets/img/kb0006/image-20231014220520035.png)
 
      1. Click on actions > Change Deployment Config
 
-        ![image-20230906225000802](/assets/img/kb0006/image-20230906225000802.png)
+        ![image-20231014220544393](/assets/img/kb0006/image-20231014220544393.png)
 
      1. Edit your configuration / click save
-        ![image-20230906225104376](/assets/img/kb0006/image-20230906225104376.png)
+        ![image-20231014220605973](/assets/img/kb0006/image-20231014220605973.png)
 
 1.   One you have seen it deploying, you can monitor it's progress via the vCenter that it is deployting to
-   ![image-20231012234908280](/assets/img/kb0006/image-20231012234908280.png)
+   ![image-20231014220617585](/assets/img/kb0006/image-20231014220617585.png)
 
 1.   The node will sit at not ready for some time, this is normal
 
-    ![image-20231012234922345](/assets/img/kb0006/image-20231012234922345.png)
+    ![image-20231014220627943](/assets/img/kb0006/image-20231014220627943.png)
 
 1.  Once completed it will change to success
 
-    ![image-20231012234934227](/assets/img/kb0006/image-20231012234934227.png)
+    ![image-20231014220639669](/assets/img/kb0006/image-20231014220639669.png))
 
 
 [^fn1]: *F*ully *Q*ualified *D*omain *N*ame
