--- a/kb/kb0006.md
+++ b/kb/kb0006.md
@@ -47,7 +47,7 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
 ## TLDR - Here is a Video
 
-<video src="../assets/vid/kb0006.webm" style="zoom:33%;"></video>
+<video src="/assets/vid/kb0006.webm" style="zoom:33%;"></video>
 
 ## Step-By-Step Guide
 
