--- a/kb/kb0006.md
+++ b/kb/kb0006.md
@@ -47,7 +47,16 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
 ## TLDR - Here is a Video
 
-<video src="/assets/vid/kb0006.webm"></video>
+<div class="container">
+  <div class="video">
+    <video width=100% preload="auto" muted loop>
+      <source src="/assets/vid/kb0006.webm" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</div>
+
+
 
 ## Step-By-Step Guide
 
