--- a/kb/kb0006.md
+++ b/kb/kb0006.md
@@ -50,11 +50,12 @@ There will be times within the NSX lifecycle when you could be required to deplo
 <div class="container">
   <div class="video">
     <video width=100% preload="auto" muted loop>
-      <source src="/assets/vid/kb0006.webm" type="video/mp4">
+      <source src="/assets/vid/kb0006.webm" type="video/webm">
       Your browser does not support the video tag.
     </video>
   </div>
 </div>
+
 
 
 
