--- a/kb/kb0006.md
+++ b/kb/kb0006.md
@@ -49,7 +49,7 @@ There will be times within the NSX lifecycle when you could be required to deplo
 
 <div class="container">
   <div class="video">
-    <video width=100% preload="auto" muted loop>
+    <video controls width=100% preload="auto" muted loop>
       <source src="/assets/vid/kb0006.webm" type="video/webm">
       Your browser does not support the video tag.
     </video>
