--- a/kb/KB0009.md
+++ b/kb/KB0009.md
@@ -44,7 +44,14 @@ comments: true
 
 ## TLDR - Here is a video
 
-<video src="/assets/vid/kb0009.mp4"></video>
+<div class="container">
+  <div class="video">
+    <video controls width=100% preload="auto" muted loop>
+      <source src="/assets/vid/kb0009.webm" type="video/webm">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</div>
 
 ## Step-By-Step
 
