--- a/kb/kb0006.md
+++ b/kb/kb0006.md
@@ -22,7 +22,7 @@ title: KB0006
 subtitle: Deploying a New Edge Node
 author: Stephen
 updated:
-thumbnail: /assets/logos/nsx-icon.png
+thumbnail-img: /assets/logos/nsx-icon.png
 cover-img: /assets/logos/nsx.png
 full-width: false
 
