--- a/kb/kb0013.md
+++ b/kb/kb0013.md
@@ -18,7 +18,7 @@ redirect_from:
   - 2023-10-08-creating-pcap-files-with-tcpdump-for-wireshark-analysis/index.html
 #*************************************
 
-title: kb0013
+title: KB0013
 subtitle: Creating .pcap Files with tcpdump for Wireshark Analysis
 author: stephen
 updated:
