--- a/_drafts/KB0007.md
+++ b/_drafts/KB0007.md
@@ -4,6 +4,7 @@ lang: en-AU
 layout: page
 social-share: true
 categories: kb
+comments: true
 
 typora-copy-images-to: ../assets/img/${filename}
 typora-root-url: ../
@@ -31,15 +32,19 @@ tags:
   - vmware
   - edge node
   - replace
-categories: kb
-comments: true
 ---
 
 * [click here for how to deploy and edge node](kb0007) 
 
 ## TLDR - Here is a video
 
-<video src="/assets/vid/kb0007.webm" style="zoom:33%;"></video>
+<div class="container">
+  <div class="video">
+    <video controls width=100% preload="auto" muted loop>
+      <source src="/assets/vid/kb0007.webm" type="video/webm">
+      Your browser does not support the video tag.
+    </video>
+  </div>
 
 ## Step-By-Step
 
