--- a/kb/kb0020.md
+++ b/kb/kb0020.md
@@ -31,14 +31,23 @@ share-description:
 share-img:
 
 tags:
-  -
+  - linux
+  - python
+  - processes
+  - resources
 categories: kb
 comments: true
 ---
 
-## **Usage**
+I have had the requirement before to list the resources processes used on a Linux box. I found the following script online but could not get the original author's details. So, if this is yours, please reach out
 
-`python3 sum_process_resources.py`
+## Usage
+
+```bash
+./python3.6 sum_process_resources.py
+```
+
+
 
 ### **Output**
 
@@ -166,5 +175,7 @@ def sum_process_resources():
 
 if __name__ == '__main__':
     sum_process_resources()
-   
 ```
+
+
+
