update frontmatter due to error ':'

--- a/kb/kb0011.md
+++ b/kb/kb0011.md
@@ -19,7 +19,7 @@ redirect_from:
 #*************************************
 
 title: KB0011
-subtitle: Edge Node Sizing Guideauthor:
+subtitle: Edge Node Sizing Guide
 updated: stephen
 cover-img: /assets/logos/nsx.png
 thumbnail-img: /assets/logos/nsx-icon.png
