--- a/kb/kb0016.md
+++ b/kb/kb0016.md
@@ -19,7 +19,7 @@ redirect_from:
 #*************************************
 
 title: kb0016
-subtitle: Could not connect to one or more vCenter Server Systems: "https://vCenterFQDN:443/sdk" error in the vSphere Client
+subtitle: 'Could not connect to one or more vCenter Server Systems: "https://vCenterFQDN:443/sdk" error in the vSphere Client'
 author: Stephen
 updated:
 thumbnail: /assets/logos/esx-icon.png
