Set title to uppercase

--- a/kb/kb0016.md
+++ b/kb/kb0016.md
@@ -18,7 +18,7 @@ redirect_from:
   - 2023-10-08-can-not-connect-to-one-or-more-vcenter-sdk-error-in-client/index.html
 #*************************************
 
-title: kb0016
+title: KB0016
 subtitle: 'Could not connect to one or more vCenter Server Systems: "https://vCenterFQDN:443/sdk" error in the vSphere Client'
 author: Stephen
 updated:
