move from page to post

--- a/kb/2023-08-23-kb0015.md
+++ b/kb/2023-08-23-kb0015.md
@@ -17,9 +17,9 @@ redirect_from:
 title: KB0015
 subtitle: Avoiding Password Expiry in NSX Manager and Edges
 author: stephen
-updated: /assets/logos/nsx.png
-cover-img: /assets/logos/nsx-icon.png
-thumbnail-img: 
+updated: 
+cover-img: /assets/logos/nsx.png
+thumbnail-img: /assets/logos/nsx-icon.png
 full-width: false
 
 share-title: Avoiding Password Expiry in NSX Manager and Edges
