--- a/kb/2023-08-23-kb0005.md
+++ b/kb/2023-08-23-kb0005.md
@@ -3,7 +3,7 @@
 lang: en-AU
 layout: post
 social-share: true
-categories: kb
+category: kb
 
 typora-copy-images-to: ../assets/img/${filename}
 typora-root-url: ../
