--- a/kb/2023-08-23-kb0018.md
+++ b/kb/2023-08-23-kb0018.md
@@ -3,7 +3,7 @@
 lang: en-AU
 layout: post
 social-share: true
-category: kb
+categories: kb
 
 typora-copy-images-to: ../assets/img/${filename}
 typora-root-url: ../
