move journals to a separate folder

--- a/journal/stephen/_posts/2023-10-14-oouch.md
+++ b/journal/stephen/_posts/2023-10-14-oouch.md
@@ -12,6 +12,7 @@ typora-root-url: ../
 #*************************************
 #fill this if you have renamed the page
 redirect_from:
+  - /2023/10/14/Oouch.html
 #*************************************
 
 title: So this happened the other day
@@ -23,7 +24,7 @@ thumbnail-img: /assets/logos/hospital-icon.png
 full-width: false
 
 share-title: So this happened the other day
-share-description: A stumble in the night lead to a trip to hospital
+share-description: A stumble in the night leads to a trip to the hospital
 share-img:  /assets/logos/hospital-icon.png
 
 tags:
