fix missing content

--- a/kb/_posts/2023-08-23-kb0015.md
+++ b/kb/_posts/2023-08-23-kb0015.md
@@ -37,3 +37,25 @@ categories: kb
 comments: true
 ---
 
+To avoid automatic password expiry for root, audit and admin users on both NSX manager and Edges we can set the password expiry to 9999 days. This is better than disabling password expiry altogether as some checks later might require password expiry to be enabled.
+
+SSH to the manager using individual IP (not cluster IP) using admin credentials
+
+Run the following commands to prevent password expiration for the three accounts:
+
+## Increasing the Number of Days to Password Expiry
+
+```
+set user admin password-expiration 9999
+set user audit password-expiration 9999
+set user root password-expiration 9999
+```
+
+## Validate settings have taken effect:
+
+```
+get user admin password-expiration
+get user audit password-expiration
+get user root password-expiration
+```
+
