Change Author to full name

--- a/kb/_posts/2023-08-23-KB0009.md
+++ b/kb/_posts/2023-08-23-KB0009.md
@@ -22,7 +22,7 @@ redirect_from:
 
 title: KB0009
 subtitle: Enabling Interface Graphing on IMC
-author: stephen
+author: Stephen Schwetz
 updated:
 cover-img: /assets/logos/hpe-aruba.png
 thumbnail-img:
