--- a/kb/_posts/2023-08-23-KB0012.md
+++ b/kb/_posts/2023-08-23-KB0012.md
@@ -25,7 +25,7 @@ redirect_from:
 
 title: KB0012
 subtitle: Scheduled Reboot with HPE Comware
-author: stephen
+author: Stephen Schwetz
 updated:
 cover-img: /assets/logos/hpe-aruba.png
 thumbnail-img:
