--- a/kb/_posts/2023-08-23-kb0005.md
+++ b/kb/_posts/2023-08-23-kb0005.md
@@ -17,7 +17,7 @@ redirect_from:
 
 title: KB0005
 subtitle: Setting Pagination in FFRD
-author:
+author: Stephen Schwetz
 updated:
 cover-img: /assets/logos/nsx.png
 thumbnail-img: /assets/logos/nsx-icon.png
