--- a/kb/_posts/2023-08-23-kb0010.md
+++ b/kb/_posts/2023-08-23-kb0010.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0010
 subtitle: Set Up Users and Groups on Fortigate Firewalls
-author: stephen
+author: Stephen Schwetz
 updated: 
 cover-img: 
 thumbnail-img: 
