--- a/kb/_posts/2023-08-23-kb0011.md
+++ b/kb/_posts/2023-08-23-kb0011.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0011
 subtitle: Edge Node Sizing Guide
-updated: stephen
+updated: Stephen Schwetz
 cover-img: /assets/logos/nsx.png
 thumbnail-img: /assets/logos/nsx-icon.png
 full-width: false
