--- a/kb/_posts/2023-08-23-kb0013.md
+++ b/kb/_posts/2023-08-23-kb0013.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0013
 subtitle: Creating .pcap Files with tcpdump for Wireshark Analysis
-author: stephen
+author: Stephen Schwetz
 updated:
 cover-img:
 thumbnail-img:
