--- a/kb/_posts/2023-08-23-kb0014.md
+++ b/kb/_posts/2023-08-23-kb0014.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0014
 subtitle: Using iperf3 to Troubleshoot Network Speed Issues
-author: Stephen
+author: Stephen Schwetz
 updated:
 cover-img: /assets/logos/iperf.png
 thumbnail-img:
