--- a/kb/_posts/2023-08-23-kb0015.md
+++ b/kb/_posts/2023-08-23-kb0015.md
@@ -17,7 +17,7 @@ redirect_from:
 
 title: KB0015
 subtitle: Avoiding Password Expiry in NSX Manager and Edges
-author: stephen
+author: Stephen Schwetz
 updated: 
 cover-img: /assets/logos/nsx.png
 thumbnail-img: /assets/logos/nsx-icon.png
