--- a/kb/_posts/2023-08-23-kb0016.md
+++ b/kb/_posts/2023-08-23-kb0016.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0016
 subtitle: 'Could not connect to one or more vCenter Server Systems: "https://vCenterFQDN:443/sdk" error in the vSphere Client'
-author: Stephen
+author: Stephen Schwetz
 updated:
 thumbnail: /assets/logos/esx-icon.png
 cover-img: /assets/logos/esx.png
