--- a/kb/_posts/2023-08-23-kb0017.md
+++ b/kb/_posts/2023-08-23-kb0017.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0017
 subtitle: vCenter - Signing certificate is not valid
-author: stephen
+author: Stephen Schwetz
 updated: 
 cover-img: /assets/logos/esx.png
 thumbnail-img: /assets/logos/esx-icon.png
