--- a/kb/_posts/2023-08-23-kb0018.md
+++ b/kb/_posts/2023-08-23-kb0018.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0018
 subtitle: Back up and restore vCenter Server Appliance vPostgres database
-author: stephen
+author: Stephen Schwetz
 updated:
 thumbnail: /assets/logos/esx-icon.png
 cover-img: /assets/logos/esx.png
