--- a/kb/_posts/2023-08-23-kb0020.md
+++ b/kb/_posts/2023-08-23-kb0020.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0020
 subtitle: Sort Processes by Resource Usage
-author: Stephen
+author: Stephen Schwetz
 updated:
 cover-img:
 thumbnail-img:
