--- a/_posts/2023-09-28.House-Rules.md
+++ b/_posts/2023-09-28.House-Rules.md
@@ -6,7 +6,7 @@ lang: en-AU
 layout: post
 title: House Rules
 subtitle: My self imposed ruleset
-author: Stephen
+author: Stephen Schwetz
 tags: [journal,2023,September]
 comments: true 
 ---
