--- a/kb/_posts/2023-08-23-KB0004.md
+++ b/kb/_posts/2023-08-23-KB0004.md
@@ -17,7 +17,7 @@ redirect_from:
 
 title: KB0004
 subtitle: Verify the Tier-0 Logical Router and TOR Connection
-author: stephen
+author: Stephen Schwetz
 updated:
 cover-img: /assets/logos/nsx.png
 thumbnail-img: /assets/logos/nsx-icon.png
