--- a/kb/_posts/2023-08-23-kb0001.md
+++ b/kb/_posts/2023-08-23-kb0001.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0001
 subtitle: Log Rotate Fails for /var/log/vmware on NSX-T Manager and Edge Nodes
-author: Stephen
+author: Stephen Schwetz
 updated:
 cover-img: /assets/logos/nsx.png
 thumbnail-img: /assets/logos/nsx-icon.png
