--- a/kb/_posts/2023-08-23-kb0002.md
+++ b/kb/_posts/2023-08-23-kb0002.md
@@ -20,7 +20,7 @@ redirect_from:
 
 title: KB0002
 subtitle: Avoiding Password Expiry in NSX Manager and Edges
-author: stephen
+author: Stephen Schwetz
 updated:
 cover-img: /assets/logos/nsx.png
 thumbnail-img: /assets/logos/nsx-icon.png
