--- a/kb/_posts/2023-08-23-kb0006.md
+++ b/kb/_posts/2023-08-23-kb0006.md
@@ -21,7 +21,7 @@ redirect_from:
 
 title: KB0006
 subtitle: Deploying a New Edge Node
-author: Stephen
+author: Stephen Schwetz
 updated:
 thumbnail-img: /assets/logos/nsx-icon.png
 cover-img: /assets/logos/nsx.png
