--- a/journal/stephen/_posts/2023-10-14-oouch.md
+++ b/journal/stephen/_posts/2023-10-14-oouch.md
@@ -17,7 +17,7 @@ redirect_from:
 
 title: So this happened the other day
 subtitle: hopefully only a sprain.
-author: Stephen
+author: Stephen Schwetz
 updated: 
 cover-img: /assets/logos/hospital.png
 thumbnail-img: /assets/logos/hospital-icon.png
