--- a/journal/stephen/_posts/2023-10-14-oouch.md
+++ b/journal/stephen/_posts/2023-10-14-oouch.md
@@ -5,8 +5,8 @@ layout: post
 social-share: true
 comments: true
 
-typora-copy-images-to: ../assets/img/${filename}
-typora-root-url: ../
+typora-copy-images-to: ../../../assets/img/${filename}
+typora-root-url: ../../../
 #**************************************
 
 #*************************************
@@ -37,13 +37,13 @@ It has been about a week since my last post, but there is good reason behind thi
 
 ### The Ouchy Knee.
 
-<img src="/assets/img/2023-10-14-Oouch/IMG_0220.png" alt="IMG_0220" style="zoom: 15%;" />
+<img src="/assets/img/2023-10-14-oouch/IMG_0220-8330768.png" alt="IMG_0220" style="zoom: 15%;" />{: .center-image }
 
 On Wednesday night, I sorta had an accident. I got up off the lounge to go to bed but didn't realise that my leg had gone to sleep. It did not end well. I ended up going arse over tit whilst also managing to fall into a washing basket at one stage. It was loud and proud enough to get Emma to wake up and come screaming into the theatre to see what was going on.
 
 After writing around on the floor performing the Peter Griffin, after a while, I could finally tell Emma what had happened. It took about 5 minutes to get up and off the floor. 
 
-<img src="/assets/img/2023-10-14-Oouch/latest-20231014232703160.png" alt="Peter hurts his knee | Family Guy Wiki | Fandom" style="zoom:50%;" />
+<img src="/assets/img/2023-10-14-oouch/latest-20231014232703160-8330772.png" alt="Peter hurts his knee | Family Guy Wiki | Fandom" style="zoom:50%;" />{: .center-image }
 
 After waking up in the morning, I was in a world of hurt. I could not put any pressure on the leg and could only get around by sitting on my butt and gingerly moving around using my one good leg to push me around whilst trying not to go in circles.
 
